Change Shading from transparent to white to prevent grey shading on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,11 +137,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .background-shading{
-  background: -o-linear-gradient(to right, var(--cp-section-blue) 0%, transparent);
-  background: -ms-linear-gradient(to right, var(--cp-section-blue) 0%, transparent);
-  background: -moz-linear-gradient(to right, var(--cp-section-blue) 0%, transparent);
-  background: -webkit-linear-gradient(to right, var(--cp-section-blue) 0%, transparent);
-  background: linear-gradient(to right, var(--cp-section-blue) 0%, transparent);
+  background: -o-linear-gradient(to right, var(--cp-section-blue) 0%, white);
+  background: -ms-linear-gradient(to right, var(--cp-section-blue) 0%, white);
+  background: -moz-linear-gradient(to right, var(--cp-section-blue) 0%, white);
+  background: -webkit-linear-gradient(to right, var(--cp-section-blue) 0%, white);
+  background: linear-gradient(to right, var(--cp-section-blue) 0%, white);
   width:100%;
   height:100%;
   display: inline-block;
